# high-performance-python

./: .dockerignore  .gitignore  Dockerfile  README.md  Taskfile.yml  glossary.md  perf.py  pyproject.toml  vizutil.py
chapter_2/: .dockerignore  Dockerfile  Dockerfile.pyspy  README.md  escape_demo.c  julia_flame.html  julia_set.py  julia_set_expanded.py.lprof  julia_set_nolists.py  julia_set_numpy_memory.py  leaky_api.py  leaky_flask.py  leaky_memray.html  mprof_julia_nolists.py  mprof_julia_pure.py  scalene-julia.html  scalene-julia.json  viztracer_julia.json
chapter_2_profiling_to_find_bottlenecks/: Taskfile.yml  bench_swap_order.py  build_flame_html.py  escape_demo.s  julia.prof  julia_flame_interactive.html  julia_set.py.lprof  julia_set_expanded.py  julia_set_memory.py  julia_set_numpy.py  lprof_swap_order.py  mprof_context_demo.py  mprof_julia.py
chapter_3/: README.md  ex02_binary_search.py  ex03_bisect_vs_dict.py  ex04_find_closest.py  ex05_overallocation.py  ex06_memory_comp_list_tuple.py  ex07_instantiation_timing.py  ex09_custom_ordering.py
chapter_3/ex02_binary_search/: plot.py
chapter_3/ex03_bisect_vs_dict/: ex03_bisect_vs_dict.py  plot.py
chapter_3/ex04_find_closest/: README.md
chapter_3/ex05_overallocation/: README.md  ex05_overallocation.py  plot.py
chapter_3/ex06_memory_comp_list_tuple/: ex06_memory_comp_list_tuple.py  plot.py
chapter_3/ex07_instantiation_timing/: README.md  ex07_instantiation_timing.py  plot.py
chapter_3/ex09_custom_ordering/: ex09_custom_ordering.py
chapter_3_lists_and_tuples/: README.md  Taskfile.yml
chapter_3_lists_and_tuples/ex02_binary_search/: README.md  ex02_binary_search.py
chapter_3_lists_and_tuples/ex03_bisect_vs_dict/: README.md
chapter_3_lists_and_tuples/ex04_find_closest/: ex04_find_closest.py  plot.py
chapter_3_lists_and_tuples/ex06_memory_comp_list_tuple/: README.md
chapter_3_lists_and_tuples/ex09_custom_ordering/: README.md  plot.py
chapter_3_lists_and_tuples/hypothesis/: README.md
chapter_4/: README.md  ex01_hash_mask.py  ex02_set_vs_list_unique.py  ex03_dict_vs_bisect.py  ex04_probing_trace.py  ex05_point_hash.py  ex06_good_bad_hash.py  ex07_twoletter_hash.py  ex08_resizing.py  ex09_int_hash.py
chapter_4/ex01_hash_mask/: README.md  plot.py
chapter_4/ex02_set_vs_list_unique/: ex02_set_vs_list_unique.py
chapter_4/ex05_point_hash/: README.md  ex05_point_hash.py  plot.py
chapter_4/ex07_twoletter_hash/: plot.py
chapter_4/ex08_resizing/: README.md
chapter_4/ex09_int_hash/: plot.py
chapter_4_dictionaries_and_sets/: Taskfile.yml
chapter_4_dictionaries_and_sets/ex01_hash_mask/: ex01_hash_mask.py
chapter_4_dictionaries_and_sets/ex02_set_vs_list_unique/: README.md  plot.py
chapter_4_dictionaries_and_sets/ex03_dict_vs_bisect/: README.md  ex03_dict_vs_bisect.py  plot.py
chapter_4_dictionaries_and_sets/ex04_probing_trace/: README.md  ex04_probing_trace.py  plot.py
chapter_4_dictionaries_and_sets/ex06_good_bad_hash/: README.md  ex06_good_bad_hash.py  plot.py
chapter_4_dictionaries_and_sets/ex07_twoletter_hash/: README.md  ex07_twoletter_hash.py
chapter_4_dictionaries_and_sets/ex08_resizing/: ex08_resizing.py  plot.py
chapter_4_dictionaries_and_sets/ex09_int_hash/: README.md  ex09_int_hash.py
chapter_4_dictionaries_and_sets/hypothesis/: README.md
chapter_5/: README.md  ex01_for_deconstructed.py  ex02_fib_list_vs_gen.py  ex03_len_trap.py  ex04_infinite_fib.py  ex05_itertools_drills.py  ex06_anomaly_pipeline.py  ex07_rolling_window.py  ex08_eager_to_lazy.py  ex09_lazy_builtins.py
chapter_5/ex01_for_deconstructed/: README.md  plot.py
chapter_5/ex04_infinite_fib/: README.md
chapter_5/ex06_anomaly_pipeline/: README.md  ex06_anomaly_pipeline.py
chapter_5/ex07_rolling_window/: README.md
chapter_5/ex08_eager_to_lazy/: plot.py
chapter_5/ex09_lazy_builtins/: ex09_lazy_builtins.py  (+1 more)
chapter_5_iterators_and_generators/: Taskfile.yml
chapter_6/: README.md  bench_summary.py  ex01_list_vs_numpy_norm.py  ex02_diffusion_python_vs_numpy.py  ex03_inplace_vs_outofplace.py  ex04_numpy_diffusion_memory.py  ex05_roll_vs_roll_add.py  ex06_float_precision_cpu.py  ex11_numexpr_crossover.py  ex12_scipy_cautionary.py
chapter_6_matrix_and_vector_computation/: README.md  Taskfile.yml  visualize_exercises.py
chapter_7_pandas_dask_polars/: README.md  Taskfile.yml  visualize_exercises.py
chapter_8_compiling_to_c/: .gitignore  README.md  Taskfile.yml  _julia.py  visualize_exercises.py
chapter_9_asynchronous_io/: .gitignore  README.md  Taskfile.yml  _ocr.py  _server.py  _workload.py  visualize_exercises.py
website/: .gitignore  docusaurus.config.js  package-lock.json  package.json  sidebars.js  sync-docs.mjs
(+196 files in other folders)
