[project]
name = "high-performance-python"
version = "0.1.0"
description = "Julia set example from High Performance Python, with profiling & flame-graph tooling."
requires-python = ">=3.12"
# The Julia set itself is pure standard library — no runtime dependencies.
dependencies = [
    "dozer>=0.9",
    "fastapi>=0.136.3",
    "flask>=3.1.3",
    "httpx>=0.28.1",
    "matplotlib>=3.10.9",
    "memory-profiler>=0.61.0",
    "memray>=1.19.3",
    "numexpr>=2.14.1",        # chapter_6 ex11: compiled vector expressions (Example 6-18)
    "numpy>=2.4.6",
    "objgraph>=3.6.2",
    "py-spy>=0.4.2",
    "scalene>=2.3.0",
    "scipy>=1.17.1",          # chapter_6 ex12: scipy.ndimage.laplace cautionary tale (Example 6-27)
    "torch>=2.12.0",          # chapter_6 ex07-ex10: GPU diffusion + precision on MPS/CUDA
    "uvicorn[standard]>=0.48.0",
    "viztracer>=1.1.1",
]

[dependency-groups]
# Profiling & visualization tools used in this project.
# Installed by default via `uv sync` (see default-groups below).
profiling = [
    "gprof2dot>=2025.4.14",  # cProfile stats -> Graphviz call-graph PNG (needs system `dot`)
    "snakeviz>=2.2.2",       # interactive icicle viewer (local web server)
    "flameprof>=0.4",        # static SVG flame graph from pstats
    "line-profiler>=5.0.2",
]

[tool.uv]
# This is an app/script project, not a distributable package — don't build it,
# just manage the environment and dependencies.
package = false
default-groups = ["profiling"]
